Revision history for Perl distribution Test-Class-Moose

{{$NEXT}}

  [BUG FIXES]

  * Fix a test failure on Windows.

0.72     2016-05-10 (TRIAL RELEASE)

  [BACKWARDS INCOMPATIBILITIES]

  * Parallel testing now parallelizes test classes rather than individual test
    instances. This is only relevant if your test suite contains parameterized
    test classes. This is slightly less efficient, but made the internal test
    running code much simpler and made it possible to fix reporting for
    parallel test runs.

  * The Test::Class::Moose::Config->builder method has been removed.

  * The Test::Class::Moose::Runner->builder method has been removed.

  [ENHANCEMENTS]

  * Rewrote the internals of Test::Class::Moose to use Test2 test events. This
    led to several changes and cleanups. Notably, parallel testing is now much
    simpler and more like sequential testing.

  * Test reporting works entirely correctly when tests are run in parallel.

  * You can now force the test_shutdown method to be run when a class is
    skipped by defining a run_test_shutdown_on_skip method in your test class
    that returns a true value.

  * Test class instances now have a $self->test_instance_name method.

  [BUG FIXES]

  * Fixed a bug in how test methods were counted. When a test class or method
    was entirely skipped by setting $self->test_skip, the method or classes
    were still included in the count returned by the report object's
    num_test_methods method.

0.71     2016-05-09

  [ENHANCEMENTS]

  * If set_process_name is true we update the process name to include
    test control method names and test methods as well.

0.70     2016-05-09

  [ENHANCEMENTS]

  * Added a new configuration parameter for the test runner,
    set_process_name. If this is true, then $0 will be updated to
    include the test instance name for each test instance as it is run.

0.69     2016-04-28

  [BUG FIXES]

  * Explicitly load Test::Most in Test::Class::Moose. Earlier versions of