@@ -49,6 +49,7 @@ stopwords = teardown
 stopwords = toolkits
 stopwords = un
 stopwords = xUnit
+Test::CleanNamespaces.skip = ^Test::Class::Moose::Util$
 ; annocpan.org was not responding
 -remove = Test::Pod::No404s
 -remove = Test::Synopsis
