@@ -51,10 +51,10 @@ subtest_streamed(
                 event Plan => sub {
                     call max   => 2;
                     call trace => object {
-                        call package => 'Moose::Meta::Method::Delegation';
-                        call line    => 110;
+                        call package => 'Test::Class::Moose::Role::Executor';
+                        call line    => 60;
                         call subname =>
-                          'Test::Class::Moose::Role::Executor::runtests';
+                          'Test::Class::Moose::Util::context_do';
                     };
                 };
                 TestsFor::Basic->expected_test_events;
